tests/paczka1/fuzzy1/77945999.err
Error in line 3: MoX3j A814 4,1
Error in line 10: 3A6A S180 56,2
Error in line 14: A498 S680 88,2
Error in line 11: 3A6A A814 27,3
Error in line 20: 6wT S180 -4,4
Error in line 16: A498 S180 99,6
Error in line 15: fEx5 S680 98,5
Error in line 21: A498 A814 87,5
Error in line 18: 6wT S180 71,0
Error in line 28: 6wT A498 4,2
